// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabGroup renders correctly 1`] = `
<DocumentFragment>
  .cache-14zu1vg.cache-14zu1vg {
  position: relative;
}

.cache-1inpyg4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
}

.cache-1rqct99 {
  position: absolute;
  display: block;
  background-color: #4f0599;
  height: 2px;
  padding: inherit;
  -webkit-transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
  transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
}

<div
    class="cache-14zu1vg"
  >
    <div
      class="cache-1inpyg4 e1iqq30b1"
      role="tablist"
    />
    <div
      class="cache-1rqct99 e1iqq30b0"
      style="left: 0px; width: 0px;"
    />
  </div>
</DocumentFragment>
`;

exports[`TabGroup renders correctly with Tabs and last disabled 1`] = `
<DocumentFragment>
  .cache-14zu1vg.cache-14zu1vg {
  position: relative;
}

.cache-1inpyg4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
}

.cache-24mhvw {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 12px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  color: #b2b6c3;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
}

.cache-24mhvw:hover,
.cache-24mhvw:active,
.cache-24mhvw:focus {
  color: #390171;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-24mhvw:focus-visible {
  outline: auto;
}

.cache-24mhvw[aria-selected='true'] {
  color: #390171;
}

.cache-24mhvw[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.5;
}

.cache-24mhvw[aria-disabled='true']:hover,
.cache-24mhvw[aria-disabled='true']:focus {
  color: #b2b6c3;
}

.cache-1rqct99 {
  position: absolute;
  display: block;
  background-color: #4f0599;
  height: 2px;
  padding: inherit;
  -webkit-transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
  transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
}

<div
    class="cache-14zu1vg"
  >
    <div
      class="cache-1inpyg4 e1iqq30b1"
      role="tablist"
    >
      <span
        aria-disabled="false"
        aria-selected="false"
        class="cache-24mhvw e4qdw5v0"
        role="tab"
        tabindex="-1"
      >
        First
      </span>
      <span
        aria-disabled="false"
        aria-selected="false"
        class="cache-24mhvw e4qdw5v0"
        role="tab"
        tabindex="-1"
      >
        Second
      </span>
      <span
        aria-disabled="true"
        aria-selected="true"
        class="cache-24mhvw e4qdw5v0"
        role="tab"
        tabindex="0"
      >
        Very long tab name
      </span>
    </div>
    <div
      class="cache-1rqct99 e1iqq30b0"
      style="left: 0px; width: 0px;"
    />
  </div>
</DocumentFragment>
`;

exports[`TabGroup renders correctly with Tabs name 1`] = `
<DocumentFragment>
  .cache-14zu1vg.cache-14zu1vg {
  position: relative;
}

.cache-1inpyg4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
}

.cache-24mhvw {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 12px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  color: #b2b6c3;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
}

.cache-24mhvw:hover,
.cache-24mhvw:active,
.cache-24mhvw:focus {
  color: #390171;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-24mhvw:focus-visible {
  outline: auto;
}

.cache-24mhvw[aria-selected='true'] {
  color: #390171;
}

.cache-24mhvw[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.5;
}

.cache-24mhvw[aria-disabled='true']:hover,
.cache-24mhvw[aria-disabled='true']:focus {
  color: #b2b6c3;
}

.cache-1rqct99 {
  position: absolute;
  display: block;
  background-color: #4f0599;
  height: 2px;
  padding: inherit;
  -webkit-transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
  transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
}

<div
    class="cache-14zu1vg"
  >
    <div
      class="cache-1inpyg4 e1iqq30b1"
      role="tablist"
    >
      <span
        aria-disabled="false"
        aria-label="first"
        aria-selected="false"
        class="cache-24mhvw e4qdw5v0"
        role="tab"
        tabindex="-1"
      >
        First
      </span>
      <span
        aria-disabled="false"
        aria-label="second"
        aria-selected="true"
        class="cache-24mhvw e4qdw5v0"
        role="tab"
        tabindex="0"
      >
        Second
      </span>
      <span
        aria-disabled="true"
        aria-label="three"
        aria-selected="false"
        class="cache-24mhvw e4qdw5v0"
        role="tab"
        tabindex="-1"
      >
        Very long tab name
      </span>
    </div>
    <div
      class="cache-1rqct99 e1iqq30b0"
      style="left: 0px; width: 0px;"
    />
  </div>
</DocumentFragment>
`;

exports[`TabGroup renders correctly with Tabs with prop 1`] = `
<DocumentFragment>
  .cache-14zu1vg.cache-14zu1vg {
  position: relative;
}

.cache-1inpyg4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
}

.cache-24mhvw {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 12px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  color: #b2b6c3;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
}

.cache-24mhvw:hover,
.cache-24mhvw:active,
.cache-24mhvw:focus {
  color: #390171;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-24mhvw:focus-visible {
  outline: auto;
}

.cache-24mhvw[aria-selected='true'] {
  color: #390171;
}

.cache-24mhvw[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.5;
}

.cache-24mhvw[aria-disabled='true']:hover,
.cache-24mhvw[aria-disabled='true']:focus {
  color: #b2b6c3;
}

.cache-1rqct99 {
  position: absolute;
  display: block;
  background-color: #4f0599;
  height: 2px;
  padding: inherit;
  -webkit-transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
  transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
}

<div
    class="cache-14zu1vg"
  >
    <div
      class="cache-1inpyg4 e1iqq30b1"
      role="tablist"
    >
      <span
        aria-disabled="false"
        aria-selected="true"
        class="cache-24mhvw e4qdw5v0"
        role="tab"
        tabindex="0"
      >
        First
      </span>
      <span
        aria-disabled="false"
        aria-selected="false"
        class="cache-24mhvw e4qdw5v0"
        role="tab"
        tabindex="-1"
      >
        Second
      </span>
      <span
        aria-disabled="false"
        aria-selected="false"
        class="cache-24mhvw e4qdw5v0"
        role="tab"
        tabindex="-1"
      >
        Very long tab name
      </span>
    </div>
    <div
      class="cache-1rqct99 e1iqq30b0"
      style="left: 0px; width: 0px;"
    />
  </div>
</DocumentFragment>
`;

exports[`TabGroup renders correctly with custom Tabs component 1`] = `
<DocumentFragment>
  .cache-14zu1vg.cache-14zu1vg {
  position: relative;
}

.cache-1inpyg4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
}

.cache-24mhvw {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 12px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  color: #b2b6c3;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
}

.cache-24mhvw:hover,
.cache-24mhvw:active,
.cache-24mhvw:focus {
  color: #390171;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-24mhvw:focus-visible {
  outline: auto;
}

.cache-24mhvw[aria-selected='true'] {
  color: #390171;
}

.cache-24mhvw[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.5;
}

.cache-24mhvw[aria-disabled='true']:hover,
.cache-24mhvw[aria-disabled='true']:focus {
  color: #b2b6c3;
}

.cache-13uzrvc {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 12px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  color: #b2b6c3;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
}

.cache-13uzrvc:hover,
.cache-13uzrvc:active,
.cache-13uzrvc:focus {
  color: #390171;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-13uzrvc:focus-visible {
  outline: auto;
}

.cache-13uzrvc[aria-selected='true'] {
  color: #390171;
}

.cache-13uzrvc[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.5;
}

.cache-13uzrvc[aria-disabled='true']:hover,
.cache-13uzrvc[aria-disabled='true']:focus {
  color: #b2b6c3;
}

.cache-1rqct99 {
  position: absolute;
  display: block;
  background-color: #4f0599;
  height: 2px;
  padding: inherit;
  -webkit-transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
  transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
}

<div
    class="cache-14zu1vg"
  >
    <div
      class="cache-1inpyg4 e1iqq30b1"
      role="tablist"
    >
      <div
        aria-disabled="false"
        aria-selected="false"
        class="cache-24mhvw e4qdw5v0"
        role="tab"
        tabindex="-1"
      >
        First
      </div>
      <a
        aria-disabled="false"
        aria-selected="false"
        class="cache-24mhvw e4qdw5v0"
        role="tab"
        tabindex="-1"
      >
        Second
      </a>
      <div
        aria-disabled="true"
        aria-selected="false"
        class="e4qdw5v0 cache-13uzrvc"
        role="tab"
        tabindex="-1"
      >
        Very long tab name
      </div>
    </div>
    <div
      class="cache-1rqct99 e1iqq30b0"
      style="left: 0px;"
    />
  </div>
</DocumentFragment>
`;

exports[`TabGroup renders correctly with invalid child 1`] = `
<DocumentFragment>
  .cache-14zu1vg.cache-14zu1vg {
  position: relative;
}

.cache-1inpyg4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
}

.cache-24mhvw {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 12px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  color: #b2b6c3;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
}

.cache-24mhvw:hover,
.cache-24mhvw:active,
.cache-24mhvw:focus {
  color: #390171;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-24mhvw:focus-visible {
  outline: auto;
}

.cache-24mhvw[aria-selected='true'] {
  color: #390171;
}

.cache-24mhvw[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.5;
}

.cache-24mhvw[aria-disabled='true']:hover,
.cache-24mhvw[aria-disabled='true']:focus {
  color: #b2b6c3;
}

.cache-1rqct99 {
  position: absolute;
  display: block;
  background-color: #4f0599;
  height: 2px;
  padding: inherit;
  -webkit-transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
  transition: left 300ms cubic-bezier(0.5, 1, 0.89, 1),width 300ms cubic-bezier(0.5, 1, 0.89, 1);
}

<div
    class="cache-14zu1vg"
  >
    <div
      class="cache-1inpyg4 e1iqq30b1"
      role="tablist"
    >
      <div
        aria-disabled="false"
        aria-selected="false"
        class="cache-24mhvw e4qdw5v0"
        role="tab"
        tabindex="-1"
      >
        First
      </div>
      <a
        aria-disabled="false"
        aria-selected="false"
        class="cache-24mhvw e4qdw5v0"
        role="tab"
        tabindex="-1"
      >
        Second
      </a>
    </div>
    <div
      class="cache-1rqct99 e1iqq30b0"
      style="left: 0px;"
    />
  </div>
</DocumentFragment>
`;
